// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`INPUT FILD - Testing with snapshots TEST01:render correctly input fild component with type=text 1`] = `
<div
  className="input-group mb-3"
>
  <input
    aria-describedby="basic-addon2"
    aria-label="Recipient's username"
    className="form-control"
    onChange={[Function]}
    type="text"
  />
</div>
`;

exports[`INPUT FILD - Testing with snapshots TEST02:render correctly input fild component with type=password 1`] = `
<div
  className="input-group mb-3"
>
  <input
    aria-describedby="basic-addon2"
    aria-label="Recipient's username"
    className="form-control"
    onChange={[Function]}
    type="password"
  />
</div>
`;

exports[`INPUT FILD - Testing with snapshots TEST03:render correctly input fild component with placeHolder=newPlaceHolder and type=password 1`] = `
<div
  className="input-group mb-3"
>
  <input
    aria-describedby="basic-addon2"
    aria-label="Recipient's username"
    className="form-control"
    onChange={[Function]}
    placeholder="newPlaceHolder"
    type="password"
  />
</div>
`;

exports[`INPUT FILD - Testing with snapshots TEST03:render correctly input fild component with placeHolder=newPlaceHolder and type=text 1`] = `
<div
  className="input-group mb-3"
>
  <input
    aria-describedby="basic-addon2"
    aria-label="Recipient's username"
    className="form-control"
    onChange={[Function]}
    placeholder="newPlaceHolder"
    type="text"
  />
</div>
`;
